Fixes spacing in delete facts modal and sets selected baselines from url

--- a/src/App.scss
+++ b/src/App.scss
@@ -334,7 +334,6 @@
 }
 
 .pf-c-modal-box__body {
-  min-width: 900px;
   max-width: 1200px;
   max-height: 600px;
 }
@@ -356,4 +355,8 @@
 
 .reload-baselines-button {
   margin-right: 5px;
+}
+
+.md-padding-top {
+  padding-top: 16px;
 }
